[TASK] - Add calendar module, endpoint
